--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,26 @@
-version: 2.1
+version: 2
 jobs:
   build:
-    docker:
-      - image: circleci/golang:1.9.2
-    working_directory: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
+    machine:
+      docker_layer_caching: true
+    working_directory: ~/repo
     steps:
       - checkout
-      - run: echo 'Hello world!'
+      - run:
+          name: Push image
+          command: |
+            echo $DOCKERHUB_USERNAME/$DOCKERHUB_PASSWORD
+            docker build -t $DOCKERHUB_USERNAME/faru.jp:$CIRCLE_SHA1 .
+            echo $DOCKERHUB_PASSWORD | docker login --username $DOCKERHUB_USERNAME --password-stdin
+            docker tag $DOCKERHUB_USERNAME/faru.jp:$CIRCLE_SHA1 $DOCKERHUB_USERNAME/faru.jp/sample:latest
+            docker push $DOCKERHUB_USERNAME/faru.jp:$CIRCLE_SHA1
+            docker push $DOCKERHUB_USERNAME/faru.jp:$latest
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build:
+          filters:
+            branches:
+              only: master
+          context: DOCKERHUB
