--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,12 +9,11 @@ jobs:
       - run:
           name: Push image
           command: |
-            echo $DOCKERHUB_USERNAME/$DOCKERHUB_PASSWORD
             docker build -t $DOCKERHUB_USERNAME/faru.jp:$CIRCLE_SHA1 .
             echo $DOCKERHUB_PASSWORD | docker login --username $DOCKERHUB_USERNAME --password-stdin
             docker tag $DOCKERHUB_USERNAME/faru.jp:$CIRCLE_SHA1 $DOCKERHUB_USERNAME/faru.jp/sample:latest
             docker push $DOCKERHUB_USERNAME/faru.jp:$CIRCLE_SHA1
-            docker push $DOCKERHUB_USERNAME/faru.jp:$latest
+            docker push $DOCKERHUB_USERNAME/faru.jp:latest
 workflows:
   version: 2
   build-deploy:
