--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,13 +30,16 @@ jobs:
             sudo cp minikube /usr/local/bin && rm minikube
 
             sudo -E minikube start --vm-driver=none --cpus 2 --memory 2048
+            sudo mv /home/circleci/.kube /home/circleci/.minikube $HOME
+            sudo chown -R $USER $HOME/.kube $HOME/.minikube
+
           name: Start minikube
       - add_ssh_keys:
           fingerprints:
             - "38:4e:17:28:8f:7a:75:c6:17:ae:c9:9c:38:09:ab:3f"
       - run: echo -e "Host bitbucket.org\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
       - run: git clone -b master git@bitbucket.org:faru_ryo/kubernetes-common.git
-      - run: kubectl patch -f kubernetes-common/web/www-deploy.yaml --dry-run -o yaml -p '{"spec":{"template":{"spec":{"containers":[{"name":"farujp","image":"faruryo/faru.jp:hogehoge"}]}}}}' > www-deploy.yaml
+      - run: kubectl patch -f kubernetes-common/web/www-deploy.yaml --dry-run -o yaml -p '{"spec":{"template":{"spec":{"containers":[{"name":"farujp","image":"faruryo/faru.jp:$CIRCLE_SHA1"}]}}}}' > www-deploy.yaml
       - run: cp -f www-deploy.yaml kubernetes-common/web/www-deploy.yaml
       - run: |
           cd kubernetes-common
