--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,10 +30,13 @@ jobs:
             sudo cp minikube /usr/local/bin && rm minikube
 
             sudo -E minikube start --vm-driver=none --cpus 2 --memory 2048
-            sudo mv /home/circleci/.kube /home/circleci/.minikube $HOME
-            sudo chown -R $USER $HOME/.kube $HOME/.minikube
 
           name: Start minikube
+      - run:
+          command: |
+            sudo mv /home/circleci/.kube /home/circleci/.minikube $HOME
+            sudo chown -R $USER $HOME/.kube $HOME/.minikube
+          name: Setup kube
       - add_ssh_keys:
           fingerprints:
             - "38:4e:17:28:8f:7a:75:c6:17:ae:c9:9c:38:09:ab:3f"
