--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
           -u $BITBUCKET_USERNAME:$BITBUCKET_PASSWORD
           -X POST
           -H 'Content-Type: application/json'
-          -d '{"title":"update www.faru.jp '$CIRCLE_SHA1'","source":{"branch":{"name":"'release/$CIRCLE_SHA1'"}},"destination":{"branch":{"name":"master"}}}'
+          -d '{"title":"update www.faru.jp '$CIRCLE_SHA1'","source":{"branch":{"name":"'release/$CIRCLE_SHA1'"}},"destination":{"branch":{"name":"master"}},"close_source_branch":true}'
 
 workflows:
   version: 2
