--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,8 @@
-version: 2.1
+version: 2.0
 jobs:
   build:
     machine:
+      image: circleci/classic:201808-01
       docker_layer_caching: true
     working_directory: ~/repo
     steps:
@@ -16,48 +17,43 @@ jobs:
             docker push faruryo/faru.jp:latest
 
   manifest:
-    working_directory: ~/repo
-    machine:
-      image: "circleci/classic:201808-01"
+    docker:
+      - image: faruryo/gitops-build-image:latest
     steps:
-      - kube-orb/install
-      - run:
-          command: >
-            curl -Lo minikube
-            https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
-            \
-              && chmod +x minikube
-            sudo cp minikube /usr/local/bin && rm minikube
-
-            sudo -E minikube start --vm-driver=none --cpus 2 --memory 2048
-
-          name: Start minikube
-      - run:
-          command: sudo chown -R $USER $HOME/.kube $HOME/.minikube
-          name: Setup kube
       - add_ssh_keys:
           fingerprints:
             - "38:4e:17:28:8f:7a:75:c6:17:ae:c9:9c:38:09:ab:3f"
-      - run: echo -e "Host bitbucket.org\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-      - run: git clone -b master git@bitbucket.org:faru_ryo/kubernetes-common.git
-      - run: >
-          kubectl patch -f kubernetes-common/web/www-deploy.yaml --dry-run -o yaml
-          -p '{"spec":{"template":{"spec":{"containers":[{"name":"farujp","image":"faruryo/faru.jp:'$CIRCLE_SHA1'"}]}}}}'
-          > www-deploy.yaml
-      - run: cp -f www-deploy.yaml kubernetes-common/web/www-deploy.yaml
-      - run: |
-          cd kubernetes-common
-          git add web/www-deploy.yaml
-          git config --global user.email circleci
-          git config --global user.name circleci
-          git commit -m "update www.faru.jp $CIRCLE_SHA1"
-          git push origin master:release/$CIRCLE_SHA1
-      - run: >
-          curl https://api.bitbucket.org/2.0/repositories/faru_ryo/kubernetes-common/pullrequests
-          -u $BITBUCKET_USERNAME:$BITBUCKET_PASSWORD
-          -X POST
-          -H 'Content-Type: application/json'
-          -d '{"title":"update www.faru.jp '$CIRCLE_SHA1'","source":{"branch":{"name":"'release/$CIRCLE_SHA1'"}},"destination":{"branch":{"name":"master"}},"close_source_branch":true}'
+      - run:
+          name: fingerprint解決
+          command: echo -e "Host bitbucket.org\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+      - run:
+          name: clone manifest
+          command: git clone -b master git@bitbucket.org:faru_ryo/kubernetes-common.git
+      - run:
+          name: update manifest
+          command: >
+            kubectl patch -f kubernetes-common/web/www-deploy.yaml --dry-run -o yaml --local
+            -p '{"spec":{"template":{"spec":{"containers":[{"name":"farujp","image":"faruryo/faru.jp:'$CIRCLE_SHA1'"}]}}}}'
+            > www-deploy.yaml
+
+            cp -f www-deploy.yaml kubernetes-common/web/www-deploy.yaml
+      - run:
+          name: Commit & Push for updating manifest
+          command: |
+            cd kubernetes-common
+            git add web/www-deploy.yaml
+            git config --global user.email circleci
+            git config --global user.name circleci
+            git commit -m "update www.faru.jp $CIRCLE_SHA1"
+            git push origin master:release/$CIRCLE_SHA1
+      - run:
+          name: Pull Request for updating manifest
+          command: >
+            curl https://api.bitbucket.org/2.0/repositories/faru_ryo/kubernetes-common/pullrequests
+            -u $BITBUCKET_USERNAME:$BITBUCKET_PASSWORD
+            -X POST
+            -H 'Content-Type: application/json'
+            -d '{"title":"update www.faru.jp '$CIRCLE_SHA1'","source":{"branch":{"name":"'release/$CIRCLE_SHA1'"}},"destination":{"branch":{"name":"master"}},"close_source_branch":true}'
 
 workflows:
   version: 2
@@ -75,6 +71,3 @@ workflows:
           filters:
             branches:
               only: master
-
-orbs:
-  kube-orb: circleci/kubernetes@0.3.0
