--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs:
             -u $BITBUCKET_USERNAME:$BITBUCKET_PASSWORD
             -X POST
             -H 'Content-Type: application/json'
-            -d '{"title":"update www.faru.jp '$CIRCLE_SHA1'","source":{"branch":{"name":"'release/$CIRCLE_SHA1'"}},"destination":{"branch":{"name":"master"}},"close_source_branch":true}'
+            -d '{"title":"update www.faru.jp '$CIRCLE_SHA1'","description":"$CIRCLE_PULL_REQUESTに対するmanifest更新","source":{"branch":{"name":"'release/$CIRCLE_SHA1'"}},"destination":{"branch":{"name":"master"}},"close_source_branch":true}'
 
 workflows:
   version: 2
